# Lab1PCD

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  conanfile.py  prepare.sh
Release/: app1  app2  input.txt  output.txt
src/: app1.c  app2.c  app3.c
